[package]
name = "tea"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Schmid"]
license = "MIT"
keywords = ["shell", "tee", "linux", "posix"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
nix = "0.26.2"
